[gd_scene load_steps=5 format=3 uid="uid://sehrh48x2a0f"]

[ext_resource type="Script" path="res://assets/scripts/arcade_projectile.gd" id="1_d1sou"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rjo41"]
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pe0o5"]
albedo_color = Color(0.715394, 0.713067, 0, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gkqnm"]
radius = 2.0
height = 8.0

[node name="ArcadeProjectile" type="Area3D"]
collision_layer = 4
script = ExtResource("1_d1sou")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, -4.37114e-08, -0.5, 0, 1, -2.18557e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_rjo41")
surface_material_override/0 = SubResource("StandardMaterial3D_pe0o5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_gkqnm")

[node name="VisibleOnScreenEnabler3D" type="VisibleOnScreenEnabler3D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler3D" to="." method="_on_screen_exited"]
